--- a/tft-share-frontend/public/privacy-policy.html
+++ b/tft-share-frontend/public/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보 보호정책 - TFT Share</title>
+    <title>개인정보처리방침 - TFT Share</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
