--- a/tft-share-frontend/public/privacy-policy.html
+++ b/tft-share-frontend/public/privacy-policy.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-10">
                     <div class="card privacy-policy-card">
                         <div class="card-body p-5">
-                            <h1 class="text-center mb-5">개인정보 보호정책</h1>
+                            <h1 class="text-center mb-5">개인정보처리방침</h1>
                             
                             <div class="policy-section mb-4">
                                 <h2>1. 개인정보 수집 및 이용 목적</h2>
