fix: 구글 리다이렉트 url 변경 및 푸터 변경

--- a/tft-share-frontend/index.html
+++ b/tft-share-frontend/index.html
@@ -24,5 +24,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
+    <!-- 구글 크롤러용 정적 링크 -->
+    <footer>
+      <a href="https://tftshare.com/privacy-policy.html">개인정보처리방침</a>
+      <a href="https://tftshare.com/terms-of-service.html">서비스 이용약관</a>
+    </footer>
   </body>
 </html>
